# whatsappApi

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requests.http  requirements-dev.txt  vercel.json
alembic/: env.py
alembic/versions/: 20260507_0001_initial.py  20260523_0002_api_keys.py
api/: index.py  requirements.txt
scripts/: init_db.py  list_templates.py  seed_data.py  send_template_with_param.py  send_test_message.py  send_text.py
src/: __init__.py  auth.py  celery_app.py  config.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  redis_client.py
src/api/: deps.py
src/api/v1/: admin.py  campaigns.py  health.py  router.py  templates.py  tenants.py  webhooks.py  whatsapp.py
src/models/: __init__.py  api_key.py  base.py  campaign.py  contact.py  message.py  template.py  tenant.py  webhook_event.py
src/schemas/: __init__.py  api_key.py  campaign.py  common.py  message.py  template.py  tenant.py  webhook.py
src/services/: __init__.py  campaign_service.py  message_service.py  rate_limiter.py  template_service.py  tenant_service.py  webhook_service.py  whatsapp_client.py
src/tasks/: __init__.py  send_campaign_task.py  send_message_task.py  webhook_processor_task.py
src/utils/: pagination.py  phone.py  retry.py  validators.py
tests/: conftest.py  test_health.py  test_webhooks.py  test_whatsapp_service.py
